--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1283,6 +1283,9 @@ lw12==0.9.2
 # homeassistant.components.scrape
 lxml==5.1.0
 
+# homeassistant.components.strip_controller
+mashumaro==3.15
+
 # homeassistant.components.matrix
 matrix-nio==0.24.0
 
